# OS2

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  test
data/: Liste des pilotes.csv  data.json  pilots.csv  tracks.csv
data/westats/: Track2_P1.csv  Track2_P2.csv  Track2_P3.csv  Track2_Q1.csv  Track2_Q2.csv  Track2_Q3.csv  Track2_RACE.csv
libs/: constants.h  utils.h
libs/cjson/: cJSON.c  cJSON.h
libs/sessions/: practice.h  qualif.h  race.h  sessions.h  sprint.h
libs/utils/: customCSV.h  customJSON.h  scores.h
westats/: Track1_54.csv
